--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@ body {
   margin: 0;
   background-color: $bg_color;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 a {
